# segmentdb

./: LICENSE  README.md  plan.md  pyproject.toml
docs/: DESIGN_DOC_TEMPLATE.md  batching.md  bloom-filter.md  manifest-spec.md  manifest.md  memtable-entry.md  memtable-flush-wiring.md  memtable.md  sstable-block-compression.md  sstable-compression-and-checksums.md  sstable.md
src/segmentdb/: db.py
src/segmentdb/storage/manifest/: Manifest.py  SSTableMeta.py  __init__.py
src/segmentdb/storage/memtable/: Memtable.py  __init__.py
src/segmentdb/storage/sstable/: BloomFilter.py  SSTableReader.py  SSTableWriter.py  models.py
src/segmentdb/storage/wal/: WALEntry.py  WALHeader.py  WALReader.py  WALWriter.py  __init__.py
tests/: __init__.py
tests/segmentdb/storage/manifest/: test_manifest.py  test_sstable_meta.py
tests/segmentdb/storage/memtable/: test_memtable_flush.py
tests/segmentdb/storage/wal/: test_wal_entry.py  test_wal_header.py
